deployment/nifi/ss-nifi.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nifi
  labels:
    app: "nifi"
spec:
  podManagementPolicy: Parallel
  serviceName: nifi-headless
  replicas: 3
  selector:
    matchLabels:
      app: nifi
  # yamllint disable rule:line-length
  template:
    metadata:
      annotations:
        security.alpha.kubernetes.io/sysctls: net.ipv4.ip_local_port_range=10000 65000
      labels:
        app: "nifi"
    spec:
      serviceAccountName: nifi-sa
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: "app"
                      operator: In
                      values:
                        - "nifi"
                topologyKey: "kubernetes.io/hostname"
      terminationGracePeriodSeconds: 30
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
      containers:
        - name: server
          imagePullPolicy: "IfNotPresent"
          image: nifi
          command:
            - bash
            - -ce
            - |
              [...]
          resources:
            limits:
              cpu: 3500m
              memory: 6Gi
            requests:
              cpu: '2'
              memory: 2Gi
          ports:
            - containerPort: 9092
              name: metrics
              protocol: TCP
            - containerPort: 9443
              name: https
              protocol: TCP
            - containerPort: 6007
              name: cluster
              protocol: TCP
          readinessProbe:
            initialDelaySeconds: 60
            periodSeconds: 20
            tcpSocket:
              port: 9443
          livenessProbe:
            initialDelaySeconds: 90
            periodSeconds: 60
            tcpSocket:
              port: 9443
          volumeMounts:
            - name: "data"
              mountPath: /opt/nifi/data
            - name: "auth-conf"
              mountPath: /opt/nifi/nifi-current/auth-conf/
            - name: "config-data"
              mountPath: /opt/nifi/nifi-current/config-data
            - name: "flowfile-repository"
              mountPath: /opt/nifi/flowfile_repository
            - name: "content-repository"
              mountPath: /opt/nifi/content_repository
            - name: "provenance-repository"
              mountPath: /opt/nifi/provenance_repository
            - name: "logs"
              mountPath: /opt/nifi/nifi-current/logs
            - name: "bootstrap-conf"
              mountPath: /opt/nifi/nifi-current/conf/bootstrap.conf
              subPath: "bootstrap.conf"
            - name: "nifi-properties"
              mountPath: /opt/nifi/nifi-current/conf/nifi.temp
              subPath: "nifi.temp"
            - name: "authorizers-temp"
              mountPath: /opt/nifi/nifi-current/conf/authorizers.temp
              subPath: "authorizers.temp"
            - name: "bootstrap-notification-services-xml"
              mountPath: /opt/nifi/nifi-current/conf/bootstrap-notification-services.xml
              subPath: "bootstrap-notification-services.xml"
            - name: "login-identity-providers-xml"
              mountPath: /opt/nifi/nifi-current/conf/login-identity-providers.xml
              subPath: "login-identity-providers.xml"
            - name: "state-management-xml"
              mountPath: /opt/nifi/nifi-current/conf/state-management.xml
              subPath: "state-management.xml"
            - name: "zookeeper-properties"
              mountPath: /opt/nifi/nifi-current/conf/zookeeper.properties
              subPath: "zookeeper.properties"
            - name: "flow-content"
              mountPath: /opt/nifi/data/flow.xml
              subPath: "flow.xml"
        - name: app-log
          imagePullPolicy: "IfNotPresent"
          image: busybox
          args: [tail, -n+1, -F, /var/log/nifi-app.log]
          resources:
            limits:
              cpu: 50m
              memory: 50Mi
            requests:
              cpu: 10m
              memory: 10Mi
          volumeMounts:
            - name: logs
              mountPath: /var/log
        - name: bootstrap-log
          imagePullPolicy: "IfNotPresent"
          image: busybox
          args: [tail, -n+1, -F, /var/log/nifi-bootstrap.log]
          resources:
            limits:
              cpu: 50m
              memory: 50Mi
            requests:
              cpu: 10m
              memory: 10Mi
          volumeMounts:
            - name: logs
              mountPath: /var/log
        - name: user-log
          imagePullPolicy: "IfNotPresent"
          image: busybox
          args: [tail, -n+1, -F, /var/log/nifi-user.log]
          resources:
            limits:
              cpu: 50m
              memory: 50Mi
            requests:
              cpu: 10m
              memory: 10Mi
          volumeMounts:
            - name: logs
              mountPath: /var/log
      volumes:
        - name: "bootstrap-conf"
          configMap:
            name: nifi-config
            items:
              - key: "bootstrap.conf"
                path: "bootstrap.conf"
        - name: "nifi-properties"
          configMap:
            name: nifi-config
            items:
              - key: "nifi.properties"
                path: "nifi.temp"
        - name: "authorizers-temp"
          configMap:
            name: nifi-config
            items:
              - key: "authorizers.xml"
                path: "authorizers.temp"
        - name: "bootstrap-notification-services-xml"
          configMap:
            name: nifi-config
            items:
              - key: "bootstrap-notification-services.xml"
                path: "bootstrap-notification-services.xml"
        - name: "login-identity-providers-xml"
          configMap:
            name: nifi-config
            items:
              - key: "login-identity-providers.xml"
                path: "login-identity-providers.xml"
        - name: "state-management-xml"
          configMap:
            name: nifi-config
            items:
              - key: "state-management.xml"
                path: "state-management.xml"
        - name: "zookeeper-properties"
          configMap:
            name: nifi-config
            items:
              - key: "zookeeper.properties"
                path: "zookeeper.properties"
        - name: "flow-content"
          configMap:
            name: nifi-config
            items:
              - key: "flow.xml"
                path: "flow.xml"
  volumeClaimTemplates:
    - metadata:
        name: "config-data"
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: $(storage_class)
        resources:
          requests:
            storage: 100Mi
    - metadata:
        name: data
      spec:
        accessModes:
          - "ReadWriteOnce"
        storageClassName: $(storage_class)
        resources:
          requests:
            storage: 1Gi
    - metadata:
        name: flowfile-repository
      spec:
        accessModes:
          - "ReadWriteOnce"
        storageClassName: $(storage_class)
        resources:
          requests:
            storage: 10Gi
    - metadata:
        name: content-repository
      spec:
        accessModes:
          - "ReadWriteOnce"
        storageClassName: $(storage_class)
        resources:
          requests:
            storage: 10Gi
    - metadata:
        name: provenance-repository
      spec:
        accessModes:
          - "ReadWriteOnce"
        storageClassName: $(storage_class)
        resources:
          requests:
            storage: 10Gi
    - metadata:
        name: logs
      spec:
        accessModes:
          - "ReadWriteOnce"
        storageClassName: $(storage_class)
        resources:
          requests:
            storage: 5Gi
    - metadata:
        name: auth-conf
      spec:
        accessModes:
          - "ReadWriteOnce"
        storageClassName: $(storage_class)
        resources:
          requests:
            storage: 100Mi
