deployment/nifi/service-nifi.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: sso-x509-https-secret
  name: nifi
  labels:
    app: "nifi"
spec:
  type: ClusterIP
  ports:
    - port: 9443
      name: https
      targetPort: 9443
  selector:
    app: nifi
