deployment/nifi/route-nifi.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  labels:
    app: "nifi"
  name: nifi
spec:
  to:
    kind: Service
    name: nifi
    weight: 100
  port:
    targetPort: https
  tls:
    termination: reencrypt
    destinationCACertificate: |-
      -----BEGIN CERTIFICATE-----
      MIIDRTCCAi2gAwIBAgIKAX0VjGfsAAAAADANBgkqhkiG9w0BAQsFADAhMQ0wCwYD
[...]
      Gv7g+9qdjNBAExMmDcFsX/BP8aIB/yBXyw==
      -----END CERTIFICATE-----
      -----BEGIN CERTIFICATE-----
      MIIDrzCCApegAwIBAgIKAX0VjOF0AAAAADANBgkqhkiG9w0BAQsFADAhMQ0wCwYD
[...]
      nAldeGgma+G7uOFsCklVSgZEwbTMNDSwDP1Ji4SR/jWOI4c=
      -----END CERTIFICATE-----
    insecureEdgeTerminationPolicy: Redirect
